--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
+    "lint": "eslint .",
     "db:gen-types": "npx supabase gen types typescript --project-id $SUPABASE_PROJECT_ID > src/shared/types/database.ts"
   },
   "dependencies": {
@@ -29,7 +29,7 @@
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
     "eslint": "^9.20.0",
-    "eslint-config-next": "15.2.1",
+    "eslint-config-next": "^16.1.6",
     "postcss": "^8.5.1",
     "tailwindcss": "^4.0.6",
     "typescript": "^5.7.3"
